eks/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: pet-shop-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pet-shop-app
  template:
    metadata:
      labels:
        app: pet-shop-app
    spec:
      serviceAccountName: pet-shop-mandatoryresources-allow-svc-account
      containers:
        - name: pet-shop-container
          image: pet-shop-to-customize #placeholder to customize
          ports:
            - containerPort: 80
