eks/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pet-shop-prod-service
spec:
  type: NodePort
  selector:
    app: pet-shop-app
  ports:
    - name: http 
      port: 80
      targetPort: 80
