eks/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: petshop-prod-ingress-class
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: petshop-prod-ingress 
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: petshop-prod-ingress # ALB name
    alb.ingress.kubernetes.io/scheme: internet-facing # Internet exposed
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /alive 
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-code: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '20'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '5'
spec:
  ingressClassName: petshop-prod-ingress-class
  rules:
    - host: pet-shop-italianodevops.duckdns.org
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend: 
              service: 
                name: pet-shop-prod-service
                port: 
                  number: 80
